--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -21,9 +21,11 @@
     "@radix-ui/react-progress": "^1.0.3",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "emailjs/browser": "^3.4.0",
     "lucide-react": "^0.241.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.8.9",
     "styled-components": "^5.3.11",
     "tailwind-merge": "^1.13.1",
     "tailwindcss-animate": "^1.0.5"
