--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.13.4",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.13.2",
+    "emailjs/brower": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.11"
